<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <!-- Address Section -->
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:text="@string/address"
        android:fontFamily="@font/capriola"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_address"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="10dp"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:contentPadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:fontFamily="@font/capriola"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <!-- Payment Section -->
    <TextView
        android:id="@+id/tv_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/capriola"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_address" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:contentPadding="2dp"
        android:fontFamily="@font/capriola"
        app:layout_constraintBottom_toTopOf="@+id/btn_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/capriola"
                android:hint="@string/card_name_surname"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#3E3E3E"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment"
                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_surname"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/capriola"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/capriola"
                android:hint="@string/card_number"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="#3E3E3E"
                android:textSize="20sp"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name_surname"
                app:startIconDrawable="@drawable/ic_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_card_number"
                    android:fontFamily="@font/capriola"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_card_number">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_card_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    app:layout_constraintWidth_default="wrap"
                    android:hint="@string/card_date"
                    android:fontFamily="@font/capriola"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="#3E3E3E"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/til_card_number"
                    app:layout_constraintStart_toEndOf="@+id/til_card_date"
                    app:layout_constraintTop_toBottomOf="@+id/til_card_number"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_card_date"
                        android:fontFamily="@font/capriola"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_cvc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:ems="10"
                    android:fontFamily="@font/capriola"
                    app:layout_constraintWidth_default="wrap"
                    android:hint="@string/cvc"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="#3E3E3E"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/til_card_number"
                    app:layout_constraintStart_toEndOf="@+id/til_card_date"
                    app:layout_constraintTop_toBottomOf="@+id/til_card_number"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cvc"
                        android:fontFamily="@font/capriola"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#B86363"
        android:fontFamily="@font/capriola"
        android:text="@string/pay"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_card" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#B86363"
        android:fontFamily="@font/capriola"
        android:text="VAZGEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pay" />

</androidx.constraintlayout.widget.ConstraintLayout>
